Visitor/LenguajeDominioEspecificoParser.java
// Generated from ./LenguajeDominioEspecifico.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LenguajeDominioEspecificoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, MATRIZ=78, FOR=79, WHILE=80, IF=81, 
		ELIF=82, ELSE=83, IN=84, RANGE=85, PRINT=86, TRUE=87, FALSE=88, GRAFICAR=89, 
		MOSTRAR_TABLA=90, KMEANS=91, PERCEPTRON=92, REGRESION=93, ID=94, NUMBER=95, 
		STRING=96, COMENTARIO=97, WS=98;
	public static final int
		RULE_programa = 0, RULE_instruccion = 1, RULE_condicional = 2, RULE_buclefor = 3, 
		RULE_buclewhile = 4, RULE_comentario = 5, RULE_asignacion = 6, RULE_expresion = 7, 
		RULE_matriz = 8, RULE_fila = 9, RULE_lista = 10, RULE_parametrosMatriz = 11, 
		RULE_regresionLineal = 12, RULE_prediccionModelo = 13, RULE_parametrosPlot = 14, 
		RULE_parametroPlot = 15, RULE_escribirArchivo = 16, RULE_guardarMatriz = 17, 
		RULE_perceptronMulticapa = 18, RULE_parametrosMLP = 19, RULE_parametroMLP = 20, 
		RULE_parametrosEntrenamiento = 21, RULE_parametroEntrenamiento = 22, RULE_kmeans = 23, 
		RULE_parametrosKMeans = 24, RULE_parametroKMeans = 25, RULE_parametrosGraficarKMeans = 26, 
		RULE_parametroGraficarKMeans = 27, RULE_graficar = 28, RULE_parametrosGraficar = 29, 
		RULE_parametroGraficar = 30, RULE_impresion = 31, RULE_operaciones = 32, 
		RULE_parametrosOp = 33, RULE_mostrarTabla = 34, RULE_parametrosTabla = 35, 
		RULE_parametroTabla = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "instruccion", "condicional", "buclefor", "buclewhile", "comentario", 
			"asignacion", "expresion", "matriz", "fila", "lista", "parametrosMatriz", 
			"regresionLineal", "prediccionModelo", "parametrosPlot", "parametroPlot", 
			"escribirArchivo", "guardarMatriz", "perceptronMulticapa", "parametrosMLP", 
			"parametroMLP", "parametrosEntrenamiento", "parametroEntrenamiento", 
			"kmeans", "parametrosKMeans", "parametroKMeans", "parametrosGraficarKMeans", 
			"parametroGraficarKMeans", "graficar", "parametrosGraficar", "parametroGraficar", 
			"impresion", "operaciones", "parametrosOp", "mostrarTabla", "parametrosTabla", 
			"parametroTabla"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'{'", "'}'", "','", "'='", "'*'", "'/'", 
			"'%'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'and'", 
			"'or'", "'not'", "'.'", "'suma'", "'resta'", "'multiplicar'", "'transpuesta'", 
			"'determinante'", "'inversa'", "'centroids'", "'leer_archivo'", "'cargar_matriz'", 
			"'['", "']'", "'fit'", "'mse'", "'mae'", "'r2'", "'rmse'", "'plot'", 
			"'predict'", "'width'", "'height'", "'left_margin'", "'point_char'", 
			"'line_char'", "'title'", "'show_stats'", "'output_file'", "'escribir_archivo'", 
			"'guardar_matriz'", "'score'", "'plot_loss'", "'layers'", "'learning_rate'", 
			"'seed'", "'epochs'", "'batch_size'", "'verbose'", "'n_clusters'", "'max_iter'", 
			"'abs'", "'factorial'", "'exp'", "'ln'", "'sqrt'", "'powf'", "'sin'", 
			"'cos'", "'tan'", "'div'", "'mod'", "'max_rows'", "'max_cols'", "'max_col_width'", 
			"'floatfmt'", "'show_index'", "'headers'", "'matriz'", "'for'", "'while'", 
			"'if'", "'elif'", "'else'", "'in'", "'range'", "'print'", "'True'", "'False'", 
			"'graficar'", "'mostrar_tabla'", "'KMeans'", "'PerceptronMulticapa'", 
			"'RegresionLineal'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "MATRIZ", "FOR", "WHILE", "IF", "ELIF", 
			"ELSE", "IN", "RANGE", "PRINT", "TRUE", "FALSE", "GRAFICAR", "MOSTRAR_TABLA", 
			"KMEANS", "PERCEPTRON", "REGRESION", "ID", "NUMBER", "STRING", "COMENTARIO", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LenguajeDominioEspecifico.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LenguajeDominioEspecificoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LenguajeDominioEspecificoParser.EOF, 0); }
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDominioEspecificoVisitor ) return ((LenguajeDominioEspecificoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 49)) & ~0x3f) == 0 && ((1L << (_la - 49)) & 320102847213571L) != 0)) {
				{
				{
				setState(74);
				instruccion();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public RegresionLinealContext regresionLineal() {
			return getRuleContext(RegresionLinealContext.class,0);
		}
		public PerceptronMulticapaContext perceptronMulticapa() {
			return getRuleContext(PerceptronMulticapaContext.class,0);
		}
		public PrediccionModeloContext prediccionModelo() {
			return getRuleContext(PrediccionModeloContext.class,0);
		}
		public ImpresionContext impresion() {
			return getRuleContext(ImpresionContext.class,0);
		}
		public ComentarioContext comentario() {
			return getRuleContext(ComentarioContext.class,0);
		}
		public BucleforContext buclefor() {
			return getRuleContext(BucleforContext.class,0);
		}
		public BuclewhileContext buclewhile() {
			return getRuleContext(BuclewhileContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public MostrarTablaContext mostrarTabla() {
			return getRuleContext(MostrarTablaContext.class,0);
		}
		public OperacionesContext operaciones() {
			return getRuleContext(OperacionesContext.class,0);
		}
		public KmeansContext kmeans() {
			return getRuleContext(KmeansContext.class,0);
		}
		public GraficarContext graficar() {
			return getRuleContext(GraficarContext.class,0);
		}
		public EscribirArchivoContext escribirArchivo() {
			return getRuleContext(EscribirArchivoContext.class,0);
		}
		public GuardarMatrizContext guardarMatriz() {
			return getRuleContext(GuardarMatrizContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).exitInstruccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDominioEspecificoVisitor ) return ((LenguajeDominioEspecificoVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruccion);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				asignacion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				regresionLineal();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				perceptronMulticapa();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				prediccionModelo();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				impresion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(87);
				comentario();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(88);
				buclefor();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(89);
				buclewhile();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(90);
				condicional();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(91);
				mostrarTabla();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(92);
				operaciones();
				setState(93);
				match(T__0);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(95);
				kmeans();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(96);
				graficar();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(97);
				escribirArchivo();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(98);
				guardarMatriz();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(LenguajeDominioEspecificoParser.IF, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public List<TerminalNode> ELIF() { return getTokens(LenguajeDominioEspecificoParser.ELIF); }
		public TerminalNode ELIF(int i) {
			return getToken(LenguajeDominioEspecificoParser.ELIF, i);
		}
		public TerminalNode ELSE() { return getToken(LenguajeDominioEspecificoParser.ELSE, 0); }
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).exitCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDominioEspecificoVisitor ) return ((LenguajeDominioEspecificoVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(IF);
			setState(102);
			match(T__1);
			setState(103);
			expresion(0);
			setState(104);
			match(T__2);
			setState(105);
			match(T__3);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 49)) & ~0x3f) == 0 && ((1L << (_la - 49)) & 320102847213571L) != 0)) {
				{
				{
				setState(106);
				instruccion();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(T__4);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELIF) {
				{
				{
				setState(113);
				match(ELIF);
				setState(114);
				match(T__1);
				setState(115);
				expresion(0);
				setState(116);
				match(T__2);
				setState(117);
				match(T__3);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 49)) & ~0x3f) == 0 && ((1L << (_la - 49)) & 320102847213571L) != 0)) {
					{
					{
					setState(118);
					instruccion();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(124);
				match(T__4);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(131);
				match(ELSE);
				setState(132);
				match(T__3);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 49)) & ~0x3f) == 0 && ((1L << (_la - 49)) & 320102847213571L) != 0)) {
					{
					{
					setState(133);
					instruccion();
					}
					}
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(139);
				match(T__4);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BucleforContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(LenguajeDominioEspecificoParser.FOR, 0); }
		public TerminalNode ID() { return getToken(LenguajeDominioEspecificoParser.ID, 0); }
		public TerminalNode IN() { return getToken(LenguajeDominioEspecificoParser.IN, 0); }
		public TerminalNode RANGE() { return getToken(LenguajeDominioEspecificoParser.RANGE, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public BucleforContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_buclefor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).enterBuclefor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).exitBuclefor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDominioEspecificoVisitor ) return ((LenguajeDominioEspecificoVisitor<? extends T>)visitor).visitBuclefor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BucleforContext buclefor() throws RecognitionException {
		BucleforContext _localctx = new BucleforContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_buclefor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(FOR);
			setState(143);
			match(T__1);
			setState(144);
			match(ID);
			setState(145);
			match(IN);
			setState(146);
			match(RANGE);
			setState(147);
			match(T__1);
			setState(148);
			expresion(0);
			setState(149);
			match(T__5);
			setState(150);
			expresion(0);
			setState(151);
			match(T__2);
			setState(152);
			match(T__2);
			setState(153);
			match(T__3);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 49)) & ~0x3f) == 0 && ((1L << (_la - 49)) & 320102847213571L) != 0)) {
				{
				{
				setState(154);
				instruccion();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BuclewhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(LenguajeDominioEspecificoParser.WHILE, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public BuclewhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_buclewhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).enterBuclewhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).exitBuclewhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDominioEspecificoVisitor ) return ((LenguajeDominioEspecificoVisitor<? extends T>)visitor).visitBuclewhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BuclewhileContext buclewhile() throws RecognitionException {
		BuclewhileContext _localctx = new BuclewhileContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_buclewhile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(WHILE);
			setState(163);
			match(T__1);
			setState(164);
			expresion(0);
			setState(165);
			match(T__2);
			setState(166);
			match(T__3);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 49)) & ~0x3f) == 0 && ((1L << (_la - 49)) & 320102847213571L) != 0)) {
				{
				{
				setState(167);
				instruccion();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComentarioContext extends ParserRuleContext {
		public TerminalNode COMENTARIO() { return getToken(LenguajeDominioEspecificoParser.COMENTARIO, 0); }
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).enterComentario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeDominioEspecificoListener ) ((LenguajeDominioEspecificoListener)listener).exitComentario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeDominioEspecificoVisitor ) return ((LenguajeDominioEspecificoVisitor<? extends T>)visitor).visitComentario(this);
			else return visitor.visitChildren(this);
		}
	}
